--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,22 @@
-.bg-color{
-    background-color: white;
+.logo-text{
+    color: #313c90;
 }
-.critical{
-    color: #249ed9;
-    letter-spacing: 2px;
+.logoFrist-text{
+    font-size: 1.2em;
 }
-.navItem{
-    color: #249ed9 !important;
-    
-}
-#navItem{
+
+.logIn-btn{
+    border: 2px solid #313c90;
     background-color: transparent;
-    border: 2px solid #249ed9;
-    padding: 3px 20px;
-    color: #249ed9;
-    margin-top: 7px;
     border-radius: 5px;
+    padding: 5px 20px !important;
+    
     transition: 0.6s ease-in;
 }
-#navItem:hover{
-    background-color: #249ed9;
-    color: white;
+.logIn-btn:hover{
+    background-color: #313c90;
+    color: white !important;
+}
+@media only screen and (max-width:668px) {
+    
 }
